Ensure text remains visible during webfont load

--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -2,6 +2,7 @@
   font-family: 'Fira Sans';
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
   src: url('/fonts/fira-sans-v16-latin-regular.woff2') format('woff2');
 }
 
@@ -9,6 +10,7 @@
   font-family: 'Fira Sans';
   font-style: normal;
   font-weight: 600;
+  font-display: swap;
   src: url('/fonts/fira-sans-v16-latin-600.woff2') format('woff2');
 }
 
@@ -16,6 +18,7 @@
   font-family: 'Merriweather';
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
   src: url('/fonts/merriweather-v30-latin-regular.woff2') format('woff2');
 }
 
@@ -23,5 +26,6 @@
   font-family: 'Merriweather';
   font-style: normal;
   font-weight: 700;
+  font-display: swap;
   src: url('/fonts/merriweather-v30-latin-700.woff2') format('woff2');
 }
